# esp-hole

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  docker-compose.yml  partitions.csv  partitions.esp32p4.csv  sdkconfig.defaults  sdkconfig.defaults.esp32p4
generator/: Dockerfile  config.example.json  config.go  gen.go  gen_test.go  go.mod  hash.go  hash_test.go  main.go  parse.go  parse_test.go  server.go  server_test.go  stats.go  stats_test.go  statsui.go
generator-node/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
generator-node/components/blocklist_pipeline/: CMakeLists.txt  generate.c  hash.c  normalize.c  parse.c  sha256_psa.c
generator-node/components/blocklist_pipeline/include/: blocklist_format.h  generate.h  hash.h  normalize.h  parse.h  sha256_psa.h
generator-node/components/blocklist_pipeline/test/: Makefile  host_main.c  scale_test.c  sha256_host.c
generator-node/main/: CMakeLists.txt  Kconfig.projbuild  allowlist.c  allowlist.h  artifact_store.c  artifact_store.h  fetch.c  fetch.h  generator_main.c  http_serve.c  http_serve.h  idf_component.yml  net.c  net.h  platform.c  platform.h  stats_ui.c  stats_ui.h
generator/webui/: index.html
main/: CMakeLists.txt  Kconfig.projbuild  blocklist.c  blocklist.h  dns_sinkhole.c  idf_component.yml  stats.c  stats.h  updater.c  updater.h
scripts/: read_boot.py
